# zero2prod-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.yaml
config/: base.yaml  local.yaml  prod.yaml
dev_tools/: init_db.sh
migrations/: 20250316125801_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: config.rs  email_client.rs  lib.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
