[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.39", default-features = false }
clock = { version = "0.3.3", default-features = false }
config = "0.15.7"
env_logger = "0.11.6"
features = { version = "0.10.0", default-features = false }
log = "0.4.25"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8.3", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.12.1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.12.12"
