[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/main.rs"
name = "zero2prod"

[dependencies]
chrono = { version = "0.4.39", default-features = false }
config = "0.15.7"
once_cell = "1.20.3"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
actix-web = "4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.8.3", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.12.1", features = ["v4"] }
validator = "0.20.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "2.9"
claims = "0.8.0"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.6.2"
